# ProjectMicroStm32

./: .gitignore  .project  README.md
.github/workflows/: main.yml
PC_APP/: CMakeLists.txt  main.cpp
PC_APP/.github/workflows/: windows-build.yml
PC_APP/Inc/: AngleDial.h  DeviceClient.h  MainWindow.h  SerialConsole.h
PC_APP/Src/: AngleDial.cpp  DeviceClient.cpp  MainWindow.cpp
STM32/: .cproject  .mxproject  .project  StupidServo Debug.launch  StupidServo.ioc  mx 4.scratch  stm32xx_it_c 2.ftl
STM32/Components/Inc/: control_state.h  log_router.h  logbuf.h  motor_control.h  net_discovery.h  net_server.h  net_tx.h  pid_sample_rb.h  pwm.h  telemetry.h  uart_rx.h  uart_tx.h
STM32/Components/Src/: command_handler.c  control_state.c  log_router.c  logbuf.c  motor_control.c  net_discovery.c  net_server.c  net_tx.c  pid_sample_rb.c  pwm.c  telemetry.c  uart_rx.c  uart_tx.c
STM32/Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h
STM32/Core/Src/: freertos.c  gpio.c  main.c  stm32f7xx_it.c  tim.c  usart.c
STM32/Debug/: StupidServo.list  makefile  objects.list  sources.mk
STM32/Debug/Components/Src/: arm_pid_init_f32.cyclo  command_handler.cyclo  control_state.cyclo  log_router.cyclo  logbuf.cyclo  motor_control 3.cyclo  motor_control.cyclo  net_discovery.cyclo  net_server.cyclo  net_tx.cyclo  pid_sample_rb.cyclo  subdir.mk  (+3 more)
STM32/LWIP/App/: lwip.c
models/: base.FCStd  big_gear.FCStd  shaft_ring.FCStd  small_gear.FCStd  small_gear_with_ring.FCStd  very_big_gear.FCStd
schematic/h-bridge/: h-bridge.kicad_prl  h-bridge.kicad_pro  h-bridge.kicad_sch
(+10 files in other folders)
